--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -1,3 +1,9 @@
+<script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        location.href = 'login.html'
+    }
+</script>
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -83,12 +89,12 @@
                 <div class="col-md-8">
                     <div class="page-action">
                         <!-- show when multiple checked -->
-                        <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
+                        <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none" id="deleteMany">批量删除</a>
                     </div>
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th class="text-center" width="40"><input type="checkbox"></th>
+                                <th class="text-center" width="40"><input type="checkbox" id="selectAll"></th>
                                 <th class="text-center" width="80">头像</th>
                                 <th>邮箱</th>
                                 <th>昵称</th>
@@ -154,7 +160,7 @@
     <script type="text/html" id="userTpl">
         {{each data}}
         <tr>
-            <td class="text-center"><input type="checkbox"></td>
+            <td class="text-center"><input type="checkbox" class="userStatus" data-id="{{$value._id}}"></td>
             <td class="text-center">
                 {{if $value.avatar}}
                 <img class="avatar" src="{{$value.avatar}}"></td>
@@ -162,10 +168,10 @@
             <td>{{$value.email}}</td>
             <td>{{$value.nickName}}</td>
             <td>{{$value.status ==0 ? '未激活' : '激活'}}</td>
-            <td>{{$value.role == admin ? '超级管理员' : '普通用户'}}</td>
+            <td>{{$value.role == 'admin' ? '超级管理员' : '普通用户'}}</td>
             <td class="text-center">
                 <a href="javascript:;" class="btn btn-default btn-xs edit" data-id="{{$value._id}}">编辑</a>
-                <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs  delete" data-id="{{$value._id}}">删除</a>
             </td>
         </tr>
         {{/each}}
