--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -51,7 +51,15 @@
                     password: password
                 },
                 success: function(response) {
-                    location.href = 'index.html'
+                    if (response.role == 'admin') {
+                        // console.log(1);
+                        location.href = '/admin/index.html'
+                    } else {
+                        // console.log(2);
+
+                        location.href = '/index.html'
+                    }
+
                 },
                 error: function() {
                     alert('用户名或密码错误');
