--- a/public/admin/password-reset.html
+++ b/public/admin/password-reset.html
@@ -12,6 +12,7 @@
     <title>Password reset &laquo; Admin</title>
     <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../assets/vendors/font-awesome/css/font-awesome.css">
+
     <link rel="stylesheet" href="../assets/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="../assets/css/admin.css">
     <script src="../assets/vendors/nprogress/nprogress.js"></script>
@@ -68,8 +69,8 @@
 
     <div class="aside">
         <div class="profile">
-            <img class="avatar" src="../uploads/avatar.jpg">
-            <h3 class="name">Coder</h3>
+            <img class="avatar">
+            <h3 class="name"></h3>
         </div>
         <ul class="nav">
             <li>
@@ -106,6 +107,7 @@
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/js/password-reset.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script>
         NProgress.done()
     </script>
