--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -38,53 +38,55 @@
             <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-            <form class="row" id="addForm">
-                <div class="col-md-9">
-                    <div class="form-group">
-                        <label for="title">标题</label>
-                        <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
+            <div id="parentBox">
+                <form class="row" id="addForm">
+                    <div class="col-md-9">
+                        <div class="form-group">
+                            <label for="title">标题</label>
+                            <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
+                        </div>
+                        <div class="form-group">
+                            <label for="content">内容</label>
+                            <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="content">内容</label>
-                        <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="feature">特色图像</label>
+                            <!-- show when image chose -->
+                            <img class="help-block thumbnail" style="display: none">
+                            <input id="feature" class="form-control" name="feature" type="file">
+                            <input type="hidden" name="thumbnail" id="thumbnail">
+                        </div>
+                        <div class="form-group">
+                            <label for="category">所属分类</label>
+                            <select id="category" class="form-control" name="category">
+                        </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="created">发布时间</label>
+                            <input id="created" class="form-control" name="createAt" type="date">
+                        </div>
+                        <div class="form-group">
+                            <label for="status">状态</label>
+                            <select id="status" class="form-control" name="state">
+                          <option value="0">草稿</option>
+                          <option value="1">已发布</option>
+                        </select>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary" type="submit">保存</button>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="feature">特色图像</label>
-                        <!-- show when image chose -->
-                        <img class="help-block thumbnail" style="display: none">
-                        <input id="feature" class="form-control" name="feature" type="file">
-                        <input type="hidden" name="thumbnail" id="thumbnail">
-                    </div>
-                    <div class="form-group">
-                        <label for="category">所属分类</label>
-                        <select id="category" class="form-control" name="category">
-            </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="created">发布时间</label>
-                        <input id="created" class="form-control" name="createAt" type="date">
-                    </div>
-                    <div class="form-group">
-                        <label for="status">状态</label>
-                        <select id="status" class="form-control" name="state">
-              <option value="0">草稿</option>
-              <option value="1">已发布</option>
-            </select>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary" type="submit">保存</button>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 
     <div class="aside">
         <div class="profile">
-            <img class="avatar" src="../uploads/avatar.jpg">
-            <h3 class="name">Coder</h3>
+            <img class="avatar">
+            <h3 class="name"></h3>
         </div>
         <ul class="nav">
             <li>
@@ -121,10 +123,58 @@
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <!-- 文章所属分类下拉列表 -->
     <script type="text/html" id="categoryTpl">
         {{each data}}
         <option value="{{$value._id}}">{{$value.title}}</option>
         {{/each}}
+    </script>
+    <!-- 修改文章信息表单模板 -->
+    <script type="text/html" id="modifyTpl">
+        <form class="row" id="modifyForm" data-id={{_id}}>
+            <div class="col-md-9">
+                <div class="form-group">
+                    <label for="title">标题</label>
+                    <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题" value="{{title}}">
+                </div>
+                <div class="form-group">
+                    <label for="content">内容</label>
+                    <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容">{{content}}</textarea>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="feature">特色图像</label>
+                    <!-- show when image chose -->
+                    <img class="help-block thumbnail" style="display: none">
+                    <input id="feature" class="form-control edit" type="file">
+                    <input type="hidden" name="thumbnail" id="thumbnail" value="{{thumbnail}}">
+                </div>
+                <div class="form-group">
+                    <label for="category">所属分类</label>
+                    <select id="category" class="form-control" name="category">
+                        {{each categories}}
+                        <option {{category == $value._id ? "selected" : ""}} value="{{$value._id}}">{{$value.title}}</option>
+                        {{/each}}
+        </select>
+                </div>
+                <div class="form-group">
+                    <label for="created">发布时间</label>
+                    <input id="created" class="form-control" name="createAt" type="date" value="{{createAt.split('T')[0]}}">
+                </div>
+                <div class="form-group">
+                    <label for="status">状态</label>
+                    <select id="status" class="form-control" name="state">
+          <option value="0" {{state == 0 ? "selected": ""}}>草稿</option>
+          <option value="1" {{state == 1 ? "selected": ""}}>已发布</option>
+        </select>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">修改</button>
+                </div>
+            </div>
+        </form>
     </script>
     <script src="../assets/js/post-add.js"></script>
     <script>
