--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -38,44 +38,44 @@
             <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-            <form class="form-horizontal">
+            <form class="form-horizontal" id="settingsForm">
                 <div class="form-group">
                     <label for="site_logo" class="col-sm-2 control-label">网站图标</label>
                     <div class="col-sm-6">
-                        <input id="site_logo" name="site_logo" type="hidden">
                         <label class="form-image">
               <input id="logo" type="file">
-              <img src="../assets/img/logo.png">
+              <img src="../assets/img/logo.png" id="preview">
               <i class="mask fa fa-upload"></i>
             </label>
+                        <input type="hidden" name="logo" id="hiddenLogo">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="site_name" class="col-sm-2 control-label">站点名称</label>
                     <div class="col-sm-6">
-                        <input id="site_name" name="site_name" class="form-control" type="type" placeholder="站点名称">
+                        <input id="title" name="title" class="form-control" type="text" placeholder="站点名称">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="site_description" class="col-sm-2 control-label">站点描述</label>
                     <div class="col-sm-6">
-                        <textarea id="site_description" name="site_description" class="form-control" placeholder="站点描述" cols="30" rows="6"></textarea>
+                        <textarea id="description" name="description" class="form-control" placeholder="站点描述" cols="30" rows="6" type="text"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="site_keywords" class="col-sm-2 control-label">站点关键词</label>
                     <div class="col-sm-6">
-                        <input id="site_keywords" name="site_keywords" class="form-control" type="type" placeholder="站点关键词">
+                        <input id="keywords" name="keywords" class="form-control" type="text" placeholder="站点关键词">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">评论</label>
                     <div class="col-sm-6">
                         <div class="checkbox">
-                            <label><input id="comment_status" name="comment_status" type="checkbox" checked>开启评论功能</label>
+                            <label><input id="comment" name="comment" type="checkbox" checked value="true">开启评论功能</label>
                         </div>
                         <div class="checkbox">
-                            <label><input id="comment_reviewed" name="comment_reviewed" type="checkbox" checked>评论必须经人工批准</label>
+                            <label><input id="review" name="review" type="checkbox" checked value="true">评论必须经人工批准</label>
                         </div>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
 
     <div class="aside">
         <div class="profile">
-            <img class="avatar" src="../uploads/avatar.jpg">
-            <h3 class="name">Coder</h3>
+            <img class="avatar">
+            <h3 class="name"></h3>
         </div>
         <ul class="nav">
             <li>
@@ -126,7 +126,9 @@
     </div>
 
     <script src="../assets/vendors/jquery/jquery.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="../assets/js/settings.js"></script>
     <script>
         NProgress.done()
     </script>
