--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -40,17 +40,18 @@
       </div> -->
             <div class="row">
                 <div class="col-md-4">
-                    <form>
+                    <form id="slidesForm">
                         <h2>添加新轮播内容</h2>
                         <div class="form-group">
                             <label for="image">图片</label>
                             <!-- show when image chose -->
                             <img class="help-block thumbnail" style="display: none">
-                            <input id="image" class="form-control" name="image" type="file">
+                            <input class="form-control" type="file" id="file">
+                            <input type="hidden" name="image" id="image">
                         </div>
                         <div class="form-group">
                             <label for="text">文本</label>
-                            <input id="text" class="form-control" name="text" type="text" placeholder="文本">
+                            <input id="text" class="form-control" name="title" type="text" placeholder="文本">
                         </div>
                         <div class="form-group">
                             <label for="link">链接</label>
@@ -71,23 +72,9 @@
                                 <th class="text-center" width="100">操作</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td class="text-center"><img class="slide" src="../uploads/slide_1.jpg"></td>
-                                <td>XIU功能演示</td>
-                                <td>#</td>
-                                <td class="text-center">
-                                    <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-center"><img class="slide" src="../uploads/slide_2.jpg"></td>
-                                <td>XIU功能演示</td>
-                                <td>#</td>
-                                <td class="text-center">
-                                    <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                                </td>
-                            </tr>
+                        <tbody id="slidesBox">
+
+
                         </tbody>
                     </table>
                 </div>
@@ -97,8 +84,8 @@
 
     <div class="aside">
         <div class="profile">
-            <img class="avatar" src="../uploads/avatar.jpg">
-            <h3 class="name">Coder</h3>
+            <img class="avatar">
+            <h3 class="name"></h3>
         </div>
         <ul class="nav">
             <li>
@@ -133,10 +120,26 @@
     </div>
 
     <script src="../assets/vendors/jquery/jquery.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="../assets/vendors/art-template/template-web.js"></script>
+    <!-- 轮播图列表模板 -->
+    <script type="text/html" id="slidesTpl">
+        {{each data}}
+        <tr>
+            <td class="text-center"><img class="slide" src="{{$value.image}}"></td>
+            <td>{{$value.title}}</td>
+            <td>{{$value.link}}</td>
+            <td class="text-center">
+                <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id="{{$value._id}}">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script src="../assets/js/slides.js"></script>
     <script>
         NProgress.done()
     </script>
 </body>
 
-</html>
+</html>o
